--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2>
             <u>
                 <b>
-                    By Ahmed
+                    By Byte Working
                 </b>
             </u>
         </h2>
